// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetPassword renders a success message 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <p
      class="lead"
    >
      Your password was changed. Please log in with your new password.
    </p>
  </div>
</DocumentFragment>
`;

exports[`ResetPassword renders an error message for a failed password reset 1`] = `
<DocumentFragment>
  <div
    class="error"
  >
    Could not reset password.
  </div>
</DocumentFragment>
`;

exports[`ResetPassword renders an error message for a missing token 1`] = `
<DocumentFragment>
  <div
    class="error"
  >
    Missing or invalid token.
  </div>
</DocumentFragment>
`;

exports[`ResetPassword renders the form 1`] = `
<DocumentFragment>
  <form
    class="root"
  >
    <p
      class="lead"
    >
      Please choose a new password to complete the password reset.
    </p>
    <div
      class="fields"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            <span
              class="requiredSymbol"
            />
            Email address
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              aria-label="email"
              autocomplete="email"
              class="input"
              id="18f79b12-9aee-4865-a3ee-6495014907f8"
              name="email"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            <span
              class="requiredSymbol"
            />
            New Password
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              aria-label="password"
              autocomplete="new-password"
              class="input"
              id="4008d6d0-7a9b-4ebe-b652-feaa8643a1d8"
              name="password"
              type="password"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            <span
              class="requiredSymbol"
            />
            Confirm new Password
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              aria-label="confirm"
              class="input"
              id="33ff755b-bbda-42dd-b2d3-955e75eed669"
              name="confirm"
              type="password"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="submit"
    >
      <button
        aria-label="submit"
        class="root_highPriority"
        type="submit"
      >
        <span
          class="content"
        >
          Reset Password
        </span>
      </button>
    </div>
  </form>
</DocumentFragment>
`;
